Add API tests with jest and supertest Enclose error objects with next() and return them Fix bugs
