# src/controllers/userController.ts
@@ -7,6 +7,7 @@ import AppUser from "../models/AppUser";
 import joiConf from "../shared/joiConf";
 import {QueryResult} from "pg";
 import db from "../db";
+import {TeamCount} from "./authController";
 
 export const getUser = async (req: Request, res: Response, next: NextFunction) => {
   try {
@@ -14,7 +15,7 @@ export const getUser = async (req: Request, res: Response, next: NextFunction) =
     const teamToken = req.get("X-API-Key") || "";
 
     const result: QueryResult<AppUser> = await db.query('SELECT * FROM app_user WHERE team_id=$1 AND user_id=$2', [teamToken, userId]);
-    if (result.rowCount == 0 || result.rows.length > 0) {
+    if (result.rowCount == 0 || result.rows.length == 0) {
       return res.status(404).json({"message": "User not found"});
     }
     const user: AppUser = result.rows[0];
@@ -31,7 +32,6 @@ export const getUser = async (req: Request, res: Response, next: NextFunction) =
   }
 };
 
-// TODO: write to S3 bucket
 export const uploadAvatar = (req: Request, res: Response, next: NextFunction) => {
   const storage = multer.diskStorage({
     destination: (req: Request, file: Express.Multer.File, cb: CallableFunction) => {
@@ -61,28 +61,34 @@ export const updateUser = async (req: Request, res: Response, next: NextFunction
 
     const userId = req.body.user.userId;
 
-    const {firstName, lastName, email, password, contactNo, avatarUrl} = req.body;
+    const {firstName, lastName, email, contactNo, avatarUrl} = req.body;
 
     const schema = Joi.object({
       firstName: Joi.string().required(),
       lastName: Joi.string().required(),
       email: Joi.string().email().required(),
-      password: Joi.string().required(),
       contactNo: Joi.string().required(),
       avatarUrl: Joi.string().required().allow(null),
     });
 
-    const {error} = schema.validate({firstName, lastName, email, password, contactNo, avatarUrl}, joiConf);
+    const {error} = schema.validate({firstName, lastName, email, contactNo, avatarUrl}, joiConf);
     if (error)
-      createError(error.details[0].message);
+      next(createError(error.details[0].message));
 
     const teamId = req.get("X-API-Key") || "";
 
+    const countResult: QueryResult<TeamCount> = await db.query('SELECT COUNT(*) AS count from app_user WHERE team_id=$1 AND email=$2', [teamId, email]);
+    if (countResult.rowCount == 0)
+      return next(createError(500, "Error registering user"));
+
+    if (countResult.rows[0].count > 0)
+      return next(createError(409, "Email already exists"));
+
     const params = [firstName, lastName, email, contactNo, avatarUrl, userId, teamId];
-    const result: QueryResult<AppUser> = await db.query('UPDATE app_user SET first_name=$1, last_name=$2, email=$3, password=$4, contact_no=$5, avatar_url=$6 WHERE user_id=$7 AND team_id=$8', params);
+    const result: QueryResult<AppUser> = await db.query('UPDATE app_user SET first_name=$1, last_name=$2, email=$3, contact_no=$5, avatar_url=$6 WHERE user_id=$7 AND team_id=$8', params);
 
     if (result.rowCount == 0 || result.rows.length > 0)
-      createError(500, "Error updating user");
+      next(createError(500, "Error updating user"));
 
     res.status(200).json({"message": "User updated successfully"});
 
@@ -99,7 +105,7 @@ export const deleteUser = async (req: Request, res: Response, next: NextFunction
     const result: QueryResult<AppUser> = await db.query('DELETE FROM app_user WHERE user_id=$1 AND team_id=$2', [userId, teamId]);
 
     if (result.rowCount == 0 || result.rows.length > 0)
-      createError(500, "Error deleting user");
+      next(createError(500, "Error deleting user"));
 
     res.status(200).json({"message": "User deleted successfully"});
   } catch (error) {
